--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,17 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "*"
+flake8 = "*"
 
 [packages]
 django = "==2.2.5"
+flake8 = "*"
+pillow = "*"
+django-countries = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
